# SimplyGB

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: audio.cpp.BCC0933F2E7A0013.idx  cart.cpp.063FD5B9AF60938B.idx  cart.h.86D13D11370276F8.idx  common.h.F241657A9630DDDA.idx  cpu.cpp.B707B18FAF500B49.idx  cpu.h.C2A55DF86A3C7D01.idx  gameboy.cpp.779EEA8249D9E88E.idx  gameboy.h.AE0E501CF174860B.idx  gpu.cpp.CA7D10CC9B94E508.idx  input.cpp.485E812642704DC6.idx  instructions.cpp.BF1645A51DA54639.idx  instructions.h.25182ABB326C25E2.idx  main.cpp.8E8DC1A43753178D.idx  mmu.cpp.3CD887BA8A3C2113.idx  mmu.h.311FAC515B2A34BD.idx
.ccls-cache/@home@nk@Documents@Repos@SimplyGB/: src@instructions.cpp  src@instructions.cpp.blob
include/: cart.h  common.h  cpu.h  gameboy.h  instructions.h  mmu.h
src/: cart.cpp  cpu.cpp  gameboy.cpp  instructions.cpp  instructions.cpp.old  main.cpp  mmu.cpp
